# docker-templates

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-check-config.yaml  .pre-commit-config.yaml  CHANGELOG.adoc  LICENSE  README.md  buildAndPush.sh  cliff.toml  renovate.json
.changelogs/: CHANGELOG-0.1.0.adoc  CHANGELOG-0.1.0.keepachangelog.md  CHANGELOG-0.1.0.md  CHANGELOG-0.2.0.adoc  CHANGELOG-0.2.0.keepachangelog.md  CHANGELOG-0.2.0.md
.github/: dependabot.yml
awscli/: Dockerfile  README.md  entrypoint.sh
enterpriselinux-rust/: .registry-data  Containerfile  README.adoc  createRpms.sh  entrypoint.sh
flutter/: Dockerfile  README.md  installSdkStuff.sh  sdk-packages.txt
golang-ol8/: Containerfile  README.adoc
latex/: Dockerfile  README.md  test1.tex
nginx-sso/: Dockerfile  README.md  nginx.conf  oic.lua  proxyconfig.conf
node-yarn-fe-builder/: Containerfile  README.md
operator-sdk/: Containerfile  Dockerfile  README.md
oraclelinux8-rust/: Containerfile  README.adoc  entrypoint.sh
osbuild-composer/: Containerfile  README.adoc  assure-services.sh  test01.toml
package-cloud/: Containerfile  README.adoc  entrypoint.sh
payara-jndi/: Dockerfile  Dockerfile.full  Dockerfile.web  README.md  dl.sh  logging.properties  (+1 more)
payara-jndi-full/: Dockerfile  README.md  dl.sh  preconfigure.sh  registerJndis.sh
payara-jndi-web/: Dockerfile  preconfigure.sh
urlcheck/: Cargo.toml  Dockerfile  README.md  gplv3-license-header.txt  opsgenie.sh  rustfmt.toml  test.csv
urlcheck/src/: main.rs  tests.rs  uc_methods.rs  uc_types.rs
(+59 files in other folders)
