[package]
name = "urlcheck"
version = "0.1.0"
authors = ["Dirk Strauss <dstrauss@ds-2.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.3", features = ["blocking"] }
url = "2.2.1"
chrono = "0.4.19"
simple-error = "0.2.3"
